<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2025-2026 aisleron.com
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/app_bar_main"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/update_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/text_margin"
                android:paddingTop="@dimen/text_margin"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/txt_update_banner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/updated_notification"
                    android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <Button
                        android:id="@+id/btn_update_dismiss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dismiss"
                        style="@style/Widget.Material3.Button.TextButton.Dialog"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium" />

                    <Button
                        android:id="@+id/btn_update_view_changes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_changes"
                        style="@style/Widget.Material3.Button.TextButton"
                        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                        android:drawableEnd="@drawable/baseline_launch_24" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <include layout="@layout/content_main" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin_bottom"
        android:contentDescription="@string/main_fab"
        android:theme="@style/ThemeOverlay.Material3.FloatingActionButton.Primary"
        app:srcCompat="@android:drawable/ic_input_add"
        app:useCompatPadding="false" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_shop_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
        android:translationX="28dp"
        android:translationY="-36dp"
        android:text="@string/add_location"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:shapeAppearance="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:icon="@drawable/baseline_add_business_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_aisle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_aisle_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
        android:translationX="28dp"
        android:translationY="-96dp"
        android:text="@string/add_aisle"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:shapeAppearance="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:icon="@drawable/baseline_add_aisle_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_product_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
        android:translationX="28dp"
        android:translationY="-156dp"
        android:text="@string/add_product"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:shapeAppearance="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:icon="@drawable/baseline_add_product_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
        android:translationX="28dp"
        android:translationY="-216dp"
        android:text="@string/search"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:shapeAppearance="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:icon="@drawable/baseline_search_24" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_scan_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/scan_barcode_fab"
        app:layout_anchor="@id/fab"
        app:layout_anchorGravity="center|center"
        android:layout_gravity="top"
        android:translationX="28dp"
        android:translationY="-276dp"
        android:text="@string/barcode_scan_barcode"
        android:visibility="gone"
        tools:visibility="visible"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:shapeAppearance="@style/Widget.Material3.ExtendedFloatingActionButton.Primary"
        app:icon="@drawable/baseline_qr_code_scanner_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>